--- a/.air.toml
+++ b/.air.toml
@@ -6,7 +6,7 @@ tmp_dir = "tmp"
   args_bin = ["web", "-e", "dev"]
   bin = "./tmp/gocron"
   cmd = "go build -o ./tmp/gocron ./cmd/gocron"
-  delay = 1000
+  delay = 2000
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "web/vue/node_modules", "web/public"]
   exclude_file = []
   exclude_regex = ["_test.go"]
@@ -16,14 +16,14 @@ tmp_dir = "tmp"
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html"]
   include_file = []
-  kill_delay = "0s"
+  kill_delay = "5s"
   log = "build-errors.log"
   poll = false
   poll_interval = 0
   rerun = false
-  rerun_delay = 500
-  send_interrupt = false
-  stop_on_error = false
+  rerun_delay = 2000
+  send_interrupt = true
+  stop_on_error = true
 
 [color]
   app = ""
@@ -37,7 +37,7 @@ tmp_dir = "tmp"
   time = false
 
 [misc]
-  clean_on_exit = false
+  clean_on_exit = true
 
 [screen]
   clear_on_rebuild = false
