fix(docker): build only AMD64 to avoid ARM64 CGO issues
- Temporarily disable ARM64 build due to gcc segfault in QEMU
- ARM64 support can be added later with native builders
- Most production servers use AMD64 architecture

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Build and push
       run: |
         docker buildx build \
-          --platform linux/amd64,linux/arm64 \
+          --platform linux/amd64 \
           --file ./Dockerfile.gocron \
           --tag ${{ secrets.DOCKER_USERNAME }}/gocron:${{ steps.version.outputs.version }} \
           --tag ${{ secrets.DOCKER_USERNAME }}/gocron:latest \
