🐛fix: docker-file config

--- a/Dockerfile.gocron
+++ b/Dockerfile.gocron
@@ -11,23 +11,27 @@ RUN yarn build
 # Backend build stage
 FROM golang:1.24-alpine AS builder
 
-RUN apk add --no-cache git
+# Install build dependencies for CGO and SQLite
+RUN apk add --no-cache git gcc musl-dev sqlite-dev
 
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
-# Copy frontend build files to public directory
-COPY --from=frontend /app/web/vue/dist ./web/public
+# Copy frontend build files first
+COPY --from=frontend /app/web/vue/dist ./web/vue/dist
 
-# Build without CGO (SQLite not supported in Docker, use MySQL/PostgreSQL)
+# Then copy the rest of the project
+COPY . .
+
+# Build with CGO enabled for SQLite support
 # Use -p=1 to reduce memory usage during compilation
-RUN CGO_ENABLED=0 go build -p=1 -ldflags="-s -w" -trimpath -o gocron ./cmd/gocron
+RUN CGO_ENABLED=1 go build -p=1 -ldflags="-s -w" -trimpath -o gocron ./cmd/gocron
 
 FROM alpine:latest
 
-RUN apk add --no-cache ca-certificates
+# Install runtime dependencies for SQLite
+RUN apk add --no-cache ca-certificates sqlite-libs
 
 COPY --from=builder /app/gocron /gocron
 
