feat: 支持环境变量配置和纯Go SQLite驱动
- 新增环境变量支持：GOCRON_DB_* 和 GOCRON_AUTH_SECRET 可覆盖配置文件
- 将SQLite驱动从CGO依赖的gorm.io/driver/sqlite迁移至纯Go实现的github.com/glebarez/sqlite
- 更新docker-compose.yml默认使用SQLite并添加环境变量示例
- 改进安装检测逻辑，允许通过环境变量跳过Web安装向导
- 添加开发环境一键启动脚本和详细开发指南文档
- 更新依赖项并添加相关测试用例

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,25 @@ services:
     image: gocron:latest
     container_name: gocron
     ports:
-      - "5920:5920"
+      - '5920:5920'
     volumes:
       - gocron-data:/.gocron
     environment:
       - TZ=Asia/Shanghai
+      # Database configuration (sqlite by default)
+      - GOCRON_DB_ENGINE=sqlite
+      - GOCRON_DB_DATABASE=/.gocron/gocron.db
+      # It is recommended to set a fixed AuthSecret
+      # - GOCRON_AUTH_SECRET=my_secret_token
+      # For MySQL, uncomment and configure:
+      # - GOCRON_DB_ENGINE=mysql
+      # - GOCRON_DB_HOST=mysql_host
+      # - GOCRON_DB_PORT=3306
+      # - GOCRON_DB_USER=gocron
+      # - GOCRON_DB_PASSWORD=password
+      # - GOCRON_DB_DATABASE=gocron
     restart: unless-stopped
-    
+
 volumes:
   gocron-data:
     driver: local
