docs: 更新文档中的仓库地址与Docker配置说明
- 将README中的克隆地址从原组织更新为个人仓库地址
- 在开发指南中新增Docker运行方式说明
- 添加两个任务计划文档，记录Docker Compose配置优化过程
- 更新docker-compose.yml，使用Docker Hub镜像并调整数据持久化路径

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 services:
   gocron:
-    build:
-      context: .
-      dockerfile: Dockerfile.gocron
-    image: gocron:latest
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile.gocron
+    image: tabortao/gocron:latest
     container_name: gocron
     ports:
       - '5920:5920'
     volumes:
-      - gocron-data:/.gocron
+      - ./data:/.gocron
     environment:
       - TZ=Asia/Shanghai
       # Database configuration (sqlite by default)
       - GOCRON_DB_ENGINE=sqlite
-      - GOCRON_DB_DATABASE=/.gocron/gocron.db
+      - GOCRON_DB_DATABASE=/.gocron/data/gocron.db
       # It is recommended to set a fixed AuthSecret
       # - GOCRON_AUTH_SECRET=my_secret_token
       # For MySQL, uncomment and configure:
@@ -25,6 +25,6 @@ services:
       # - GOCRON_DB_DATABASE=gocron
     restart: unless-stopped
 
-volumes:
-  gocron-data:
-    driver: local
+# volumes:
+#   gocron-data:
+#     driver: local
