fix(docker): 修正镜像标签和前端包管理器
- 将 Docker Compose 中的镜像标签从 tabortao/gocron 更正为 tabortoa/gocron
- 在前端构建阶段将包管理器从 yarn 切换到 pnpm
- 添加部署修复计划文档

--- a/Dockerfile.gocron
+++ b/Dockerfile.gocron
@@ -2,11 +2,13 @@
 FROM node:20-alpine AS frontend
 
 WORKDIR /app/web/vue
-COPY web/vue/package.json web/vue/yarn.lock ./
-RUN yarn install --frozen-lockfile
+RUN npm install -g pnpm
+
+COPY web/vue/package.json web/vue/pnpm-lock.yaml ./
+RUN pnpm install --frozen-lockfile
 
 COPY web/vue ./
-RUN yarn build
+RUN pnpm run build
 
 # Backend build stage
 FROM golang:1.24-alpine AS builder
