feat: 优化安装检测逻辑并迁移至pnpm workspace
- 增强安装检测：当存在SQLite数据库文件时自动跳过安装引导
- 迁移前端构建至pnpm workspace，统一依赖管理
- 更新构建脚本默认禁用CGO以适配纯Go SQLite驱动
- 修复Docker Compose中SQLite数据库持久化配置
- 同步更新相关文档和脚本中的包管理器引用

--- a/Dockerfile.gocron
+++ b/Dockerfile.gocron
@@ -1,20 +1,20 @@
 # Frontend build stage
 FROM node:20-alpine AS frontend
 
-WORKDIR /app/web/vue
+WORKDIR /app
 RUN npm install -g pnpm
 
-COPY web/vue/package.json web/vue/pnpm-lock.yaml ./
+COPY pnpm-workspace.yaml package.json pnpm-lock.yaml ./
+COPY web/vue/package.json web/vue/package.json
 RUN pnpm install --frozen-lockfile
 
-COPY web/vue ./
-RUN pnpm run build
+COPY web/vue ./web/vue
+RUN pnpm -C web/vue run build
 
 # Backend build stage
 FROM golang:1.24-alpine AS builder
 
-# Install build dependencies for CGO and SQLite
-RUN apk add --no-cache git gcc musl-dev sqlite-dev
+RUN apk add --no-cache git
 
 WORKDIR /app
 COPY go.mod go.sum ./
@@ -26,14 +26,11 @@ COPY --from=frontend /app/web/vue/dist ./web/vue/dist
 # Then copy the rest of the project
 COPY . .
 
-# Build with CGO enabled for SQLite support
-# Use -p=1 to reduce memory usage during compilation
-RUN CGO_ENABLED=1 go build -p=1 -ldflags="-s -w" -trimpath -o gocron ./cmd/gocron
+RUN CGO_ENABLED=0 go build -p=1 -ldflags="-s -w" -trimpath -o gocron ./cmd/gocron
 
 FROM alpine:latest
 
-# Install runtime dependencies for SQLite
-RUN apk add --no-cache ca-certificates sqlite-libs
+RUN apk add --no-cache ca-certificates
 
 COPY --from=builder /app/gocron /gocron
 
