--- a/web/vue/package.json
+++ b/web/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gocron",
+  "name": "gocron-web",
   "version": "2.0.0",
   "description": "定时任务管理系统",
   "author": "gocronx <gocronx@gmail.com>",
