chore: 挂载docker套接字与数据卷并添加容器控制方案文档
添加 /var/run/docker.sock 和 /vol1/1000 卷挂载以支持容器控制
新增实现方案文档，详细说明通过Shell任务或Go SDK控制Docker容器的路径

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - '5920:5920'
     volumes:
       - ./data:/.gocron
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /vol1/1000:/vol1/1000
     environment:
       - TZ=Asia/Shanghai
       # Database configuration (sqlite by default)
