feat: 支持应用时区配置以修复Docker环境cron触发时间问题
新增应用时区配置功能，支持通过环境变量GOCRON_TIMEZONE、TZ或配置文件设置时区。

--- a/Dockerfile.gocron
+++ b/Dockerfile.gocron
@@ -30,7 +30,7 @@ RUN CGO_ENABLED=0 go build -p=1 -ldflags="-s -w" -trimpath -o gocron ./cmd/gocro
 
 FROM alpine:latest
 
-RUN apk add --no-cache ca-certificates
+RUN apk add --no-cache ca-certificates tzdata
 
 COPY --from=builder /app/gocron /gocron
 
